# TIWS_Praktikum_1

./: .gitignore  Adjacency Matrix.txt  CMakeLists.txt  TIWS_Praktikum_1.pl  main.cpp
graph/: graph.cpp  graph.hpp  loadMatrix.cpp
